--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -8,13 +8,32 @@
 
     <TextView
         android:id="@+id/commandName"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="foo"
+        android:textAlignment="viewStart"
+        android:textSize="22sp"
+        android:padding="15dp"
+        android:fontFamily="monospace"
+        android:background="@color/primaryColor"
+        android:text="command name"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/whatis"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="viewStart"
+        android:padding="15dp"
+        android:fontFamily="monospace"
+        android:textSize="16sp"
+        android:text="whatis"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/commandName" />
+
+    <!--
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabs"
         android:layout_width="match_parent"
@@ -33,14 +52,32 @@
             android:layout_height="wrap_content"
             android:text="@string/man" />
     </com.google.android.material.tabs.TabLayout>
+    -->
 
     <TextView
-        android:id="@+id/page"
-        android:layout_width="wrap_content"
+        android:id="@+id/tldr"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="bar"
+        android:textAlignment="viewStart"
+        android:padding="15dp"
+        android:fontFamily="monospace"
+        android:textSize="14sp"
+        android:text="tldr"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/whatis" />
+
+    <TextView
+        android:id="@+id/man"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="viewStart"
+        android:padding="15dp"
+        android:fontFamily="monospace"
+        android:textSize="14sp"
+        android:text="man"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tldr" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
