--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -26,12 +26,23 @@
         android:layout_height="wrap_content"
         android:textAlignment="viewStart"
         android:padding="15dp"
-        android:fontFamily="monospace"
         android:textSize="16sp"
         android:text="whatis"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/commandName" />
+
+    <TextView
+        android:id="@+id/providerPackage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="viewStart"
+        android:padding="15dp"
+        android:textSize="16sp"
+        android:text="package"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/whatis" />
 
     <!--
     <com.google.android.material.tabs.TabLayout
@@ -54,30 +65,41 @@
     </com.google.android.material.tabs.TabLayout>
     -->
 
-    <TextView
-        android:id="@+id/tldr"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAlignment="viewStart"
-        android:padding="15dp"
-        android:fontFamily="monospace"
-        android:textSize="14sp"
-        android:text="tldr"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/whatis" />
-
-    <TextView
-        android:id="@+id/man"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAlignment="viewStart"
-        android:padding="15dp"
-        android:fontFamily="monospace"
-        android:textSize="14sp"
-        android:text="man"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tldr" />
+        app:layout_constraintTop_toBottomOf="@+id/providerPackage">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+            <TextView
+                android:id="@+id/tldr"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="viewStart"
+                android:padding="15dp"
+                android:fontFamily="monospace"
+                android:textSize="14sp"
+                android:text="tldr"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+            <TextView
+                android:id="@+id/man"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="viewStart"
+                android:padding="15dp"
+                android:fontFamily="monospace"
+                android:textSize="14sp"
+                android:text="man"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tldr" />
+        </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
