--- a/android/app/src/main/res/menu/nav.xml
+++ b/android/app/src/main/res/menu/nav.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/completed"
+    <item android:id="@+id/completedCommandsFragment"
         android:icon="@drawable/ic_launcher_background"
         android:title="@string/completed"
         app:showAsAction="ifRoom" />
-    <item android:id="@+id/remaining"
+    <item android:id="@+id/remainingCommandsFragment"
         android:icon="@drawable/ic_launcher_background"
         android:title="@string/remaining"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
 </menu>
