--- a/android/app/src/main/res/layout/fragment_command.xml
+++ b/android/app/src/main/res/layout/fragment_command.xml
@@ -16,10 +16,11 @@
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/pager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/tabLayout"
+        app:layout_constraintBottom_toTopOf="@+id/providerPackage"/>
 
     <TextView
         android:id="@+id/providerPackage"
