--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -2,7 +2,8 @@
 
     <!-- Base application theme. -->
     <!-- See: https://developer.android.com/guide/topics/ui/look-and-feel/darktheme -->
-    <style name="AppTheme" parent="Theme.AppCompat.DayNight">
+    <!-- We're using a NoActionBar theme because we provide our own Toolbar in the layout. -->
+    <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!--
         <item name="colorPrimary">@color/primaryColor</item>
         <item name="colorPrimaryDark">@color/primaryDarkColor</item>
